--- a/commons-pinyin/pom.xml
+++ b/commons-pinyin/pom.xml
@@ -2,16 +2,13 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.github.clinker.commons</groupId>
-	<artifactId>commons-pinyin</artifactId>
-	<version>1.0.0</version>
+	<parent>
+		<groupId>com.github.clinker.commons</groupId>
+		<artifactId>commons-version</artifactId>
+		<version>1.0.0</version>
+	</parent>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
-		<junit.jupiter.version>5.7.0</junit.jupiter.version>
-	</properties>
+	<artifactId>commons-pinyin</artifactId>
 
 	<dependencies>
 		<dependency>
