打包的jar不要版本号

--- a/commons-spring-boot/pom.xml
+++ b/commons-spring-boot/pom.xml
@@ -19,6 +19,8 @@
 	</dependencies>
 
 	<build>
+		<!-- 不要版本号 -->
+		<finalName>${artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
