--- a/commons-spring-boot/pom.xml
+++ b/commons-spring-boot/pom.xml
@@ -20,7 +20,7 @@
 
 	<build>
 		<!-- 不要版本号 -->
-		<finalName>${artifactId}</finalName>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
