--- a/commons-webmvc-starter/pom.xml
+++ b/commons-webmvc-starter/pom.xml
@@ -30,9 +30,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.hibernate</groupId>
+			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>6.1.6.Final</version>
 		</dependency>
 
 		<dependency>
