--- a/commons-sms-verifycode-starter/pom.xml
+++ b/commons-sms-verifycode-starter/pom.xml
@@ -18,13 +18,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>io.lettuce</groupId>
-			<artifactId>lettuce-core</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
 		</dependency>
 	</dependencies>
 </project>
