--- a/commons-version/pom.xml
+++ b/commons-version/pom.xml
@@ -11,11 +11,11 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
-		<spring.version>5.2.10.RELEASE</spring.version>
-		<spring-boot.version>2.3.5.RELEASE</spring-boot.version>
+		<spring.version>5.3.1</spring.version>
+		<spring-boot.version>2.4.0</spring-boot.version>
 		<slf4j.version>1.7.30</slf4j.version>
 		<logback.version>1.2.3</logback.version>
 		<lombok.version>1.18.16</lombok.version>
-		<junit.jupiter.version>5.6.3</junit.jupiter.version>
+		<junit.jupiter.version>5.7.0</junit.jupiter.version>
 	</properties>
 </project>
